syntax = "proto3";

package inventory_service;

option go_package = "ecommerce-microservices/proto/inventory_service";

// Inventory message mirrors the 'inventory' table.
message Inventory {
  string id = 1;
  string product_id = 2;
  int32 quantity = 3;
  int32 reserved = 4;
  string updated_at = 5;
}

message UpdateInventoryRequest {
  string product_id = 1;
  int32 quantity_change = 2; // Can be positive for restock or negative for purchase
}

message UpdateInventoryResponse {
  Inventory inventory = 1;
}

message GetInventoryRequest {
  string product_id = 1;
}

message GetInventoryResponse {
  Inventory inventory = 1;
}

// Service for inventory-related gRPC calls.
service InventoryService {
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  rpc GetInventory(GetInventoryRequest) returns (GetInventoryResponse);
}